GL/Projet_GL/src/test/deca/context/valid/sansObjet/print/print_avec_ident.deca
// Test : print_variable_int
// But : vérifier qu’une variable entière peut être affichée.
// Couvre : déclaration, affectation, utilisation dans print.
// Résultat attendu : affiche 1.

{
    int a;
    a = 1;
    print(a);
}